--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 <body>
   <h1>宝可梦属性克制查询</h1>
 
-  <div id="attackResult" class="result">
-    <h2>克制（攻击方）</h2>
-    <div class="types"></div>
-  </div>
-
   <div id="typeButtons" class="buttons"></div>
 
-  <div id="defenseResult" class="result">
-    <h2>被克制（防御方）</h2>
-    <div class="types"></div>
+  <div class="results">
+    <div class="result">
+      <h2>克制（攻击）</h2>
+      <div id="attackResult" class="types"></div>
+    </div>
+
+    <div class="result">
+      <h2>被克制（防御）</h2>
+      <div id="defenseResult" class="types"></div>
+    </div>
   </div>
 
   <script src="script.js"></script>
