--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>宝可梦属性克制查询</title>
+  <title>宝可梦属性克制计算</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>宝可梦属性克制查询</h1>
+<h1>宝可梦属性克制计算</h1>
 
 <div id="buttons" class="buttons"></div>
 
-<div class="panel">
-  <div class="box">
+<div class="results">
+  <div class="col">
     <h2>克制（攻击）</h2>
     <div id="attack"></div>
   </div>
 
-  <div class="box">
+  <div class="col">
     <h2>被克制（防御）</h2>
     <div id="defense"></div>
   </div>
