--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>宝可梦属性克制计算</title>
+  <title>宝可梦属性倍率计算</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>宝可梦属性克制计算</h1>
+<h1>宝可梦属性倍率计算</h1>
 
 <div id="buttons" class="buttons"></div>
 
 <div class="results">
   <div class="col">
-    <h2>克制（攻击）</h2>
+    <h2>攻击方倍率</h2>
     <div id="attack"></div>
   </div>
 
   <div class="col">
-    <h2>被克制（防御）</h2>
+    <h2>防御方倍率</h2>
     <div id="defense"></div>
   </div>
 </div>
