--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <div id="buttons" class="buttons"></div>
 
 <div class="results">
-  <div class="col">
+  <div class="panel">
     <h2>攻击方倍率</h2>
-    <div id="attack"></div>
+    <div id="attack" class="table"></div>
   </div>
 
-  <div class="col">
+  <div class="panel">
     <h2>防御方倍率</h2>
-    <div id="defense"></div>
+    <div id="defense" class="table"></div>
   </div>
 </div>
 
